[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "books"
authors = [{name = "Frappe Technologies Pvt. Ltd.", email = "developers@frappe.io"}]
description = "Free Accounting Software"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]
dynamic = ["version"]
dependencies = [
    "frappe>=15.0.0-dev",
    "num2words~=0.5.13",
    "python-dateutil~=2.8.2",
    "holidays~=0.37",
    "reportlab~=4.0.7",
    "WeasyPrint~=60.2",
    "pdfkit~=1.0.0",
    "openpyxl~=3.1.2",
    "xlrd~=2.0.1",
    "xlwt~=1.3.0",
    "python-docx~=1.1.0",
    "ofxparse~=0.21",
    "validators~=0.22.0",
    "phonenumbers~=8.13.26",
    "gevent~=23.9.1",
    "psycopg2-binary~=2.9.9",
    "supervisor~=4.2.5",
    "gunicorn~=21.2.0",
]

[project.optional-dependencies]
dev = [
    "coverage~=7.3.2",
    "Faker~=20.1.0",
    "hypothesis~=6.88.4",
    "unittest-xml-reporting~=3.2.0",
]

[project.urls]
Homepage = "https://frappebooks.com"
Documentation = "https://docs.frappebooks.com"
Repository = "https://github.com/alazab-group/books"
Changelog = "https://github.com/alazab-group/books/releases"

[project.scripts]
books = "books.utils.bench_helper:main"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017", "B018", "B023", "B904", "E501", "F401", "F403", "F405", "RUF012"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.coverage.run]
source = ["books"]
omit = ["*/tests/*", "*/commands/*", "*/patches/*", "*/migrations/*", "*/__pycache__/*"]

[tool.coverage.report]
skip_covered = true
show_missing = true
